# RackAFX-Dev

./: README.md
ALL_SDK/AAX_SDK/: ReadMe.txt
ALL_SDK/AAX_SDK/Interfaces/: AAX.h  AAX_Atomic.h  AAX_CBinaryDisplayDelegate.h  AAX_CBinaryTaperDelegate.h  AAX_CDecibelDisplayDelegateDecorator.h  AAX_CEffectDirectData.h  AAX_CEffectGUI.h  AAX_CEffectParameters.h  AAX_CHostProcessor.h  AAX_CLinearTaperDelegate.h  AAX_CLogTaperDelegate.h  AAX_CNumberDisplayDelegate.h  AAX_CParameter.h  AAX_CPercentDisplayDelegateDecorator.h  AAX_CPieceWiseLinearTaperDelegate.h  AAX_CRangeTaperDelegate.h  AAX_CStateDisplayDelegate.h  AAX_CStateTaperDelegate.h  AAX_CString.h  AAX_CStringDisplayDelegate.h  AAX_CUnitDisplayDelegateDecorator.h  AAX_CUnitPrefixDisplayDelegateDecorator.h  AAX_Enums.h  AAX_GUITypes.h  AAX_IACFEffectParameters.h  AAX_ICollection.h  AAX_IDisplayDelegateDecorator.h  AAX_PopStructAlignment.h  AAX_Properties.h  AAX_Push2ByteStructAlignment.h  AAX_Push4ByteStructAlignment.h  AAX_Push8ByteStructAlignment.h  AAX_StringUtilities.hpp  AAX_UIDs.h  AAX_VAutomationDelegate.h  AAX_VCollection.h  AAX_VComponentDescriptor.h  AAX_VController.h  AAX_VDescriptionHost.h  AAX_VEffectDescriptor.h  (+9 more)
ALL_SDK/myprojects/: blocktest-source.sit  eqsync-source.sit  midigater-source.sit  monomaker-source.sit  polarizer-source.sit  rezsynth-source.sit  scrubby-source.sit  skidder-source.sit
ALL_SDK/myprojects/AmplitudeImposer/: AmplitudeImposer.aps  AmplitudeImposer.cpp  AmplitudeImposer.def  AmplitudeImposer.dsp  AmplitudeImposer.dsw  AmplitudeImposer.h  AmplitudeImposer.rc  AmplitudeImposerEditor.cpp  AmplitudeImposerEditor.h  AmplitudeImposerMain.cpp  RightClickControls.cpp  RightClickControls.h  readme.txt  resource.h
ALL_SDK/myprojects/AniSynth/: AniSynth.cpp  AniSynth.prj  AniSynth.sln  AniSynth.vcproj  AniSynth.vcxproj  AniSynth.vcxproj.filters  AniSynthVoice.cpp  AniSynthVoice.h  DiodeLadderFilter.cpp  DiodeLadderFilter.h  Filter.cpp  RackAFXDLL.cpp  RackAFXDLL.h  SynthParamLimits.h  VectorPathGenerator.cpp  VectorSynthVoice.cpp
ALL_SDK/myprojects/Cycle Shifter/: CycleShifter.cpp  CycleShifter.def  CycleShifter.dsp  CycleShifter.dsw  CycleShifter.h  CycleShifterEditor.cpp  CycleShifterEditor.h  CycleShifterMain.cpp  readme.txt  resource.h
ALL_SDK/myprojects/DXSynth/: DXSynth.cpp  DXSynth.h  DXSynth.prj  DXSynth.sln  DXSynth.vcproj  DXSynth.vcxproj  DXSynth.vcxproj.filters  DXSynthVoice.cpp  DXSynthVoice.h  Oscillator.h  RackAFXDLL.cpp  RackAFXDLL.h  WTOscillator.h
ALL_SDK/myprojects/DigiSynth/: DigiSynth.cpp  DigiSynth.h  DigiSynth.prj  DigiSynth.res  DigiSynth.sln  DigiSynth.sln.old  DigiSynth.vcproj  DigiSynth.vcxproj  DigiSynth.vcxproj.filters  DigiSynthVoice.h  ModulationMatrix.h  Oscillator.h  RackAFXDLL.cpp  RackAFXDLL.h  SampleOscillator.h  base_vc15.lib  base_vc15d.lib  plugin.cpp  plugin.h  stdint.h
ALL_SDK/myprojects/Feedback-yThing/: Editor.cpp  Editor.h  Feedback-yThing.dsp  Feedback-yThing.dsw  Feedback-yThing.sln  (+5 more)
ALL_SDK/myprojects/Grey_Matter/ExportedProjects/NanoSynth/project_source/cmake/aax_cmake/: CMakeLists.txt
ALL_SDK/myprojects/NanoSynth FINAL/ExportedProjects/NanoSynth/: CMakeLists.txt
ALL_SDK/myprojects/NanoSynth FINAL/ExportedProjects/NanoSynth/cmake/au_cmake/: CMakeLists.txt
ALL_SDK/myprojects/NanoSynth FINAL/ExportedProjects/NanoSynth/project_source/cmake/au_cmake/: CMakeLists.txt
ALL_SDK/myprojects/NanoSynth FINAL/ExportedProjects/NanoSynth/project_source/cmake/vst_cmake/: CMakeLists.txt
ALL_SDK/myprojects/NanoSynth FINAL/ExportedProjects/NanoSynth/project_source/mac/au/: Info.plist
ALL_SDK/myprojects/NanoSynth FINAL/ExportedProjects/NanoSynth/project_source/source/aax_source/: AAX_CRafxLogTaperDelegate.h  AAXtoVSTGUIButtonState.h  RackAFX_Describe.cpp  RackAFX_Describe.h  RackAFX_GUI.h  RackAFX_Parameters.cpp
ALL_SDK/myprojects/NanoSynth FINAL/ExportedProjects/NanoSynth/project_source/source/au_source/: RackAFX2AUFilter.cpp  RackAFX2AUFilter.exp  RackAFX2AUFilter.h  RackAFX2AUFilter.r
ALL_SDK/myprojects/NanoSynth FINAL/ExportedProjects/NanoSynth/project_source/source/au_source/cocoa_ui/: NanoSynth284027328_UIView.h  NanoSynth284027328_ViewFactory.h  NanoSynth284027328_ViewFactory.m
ALL_SDK/myprojects/NanoSynth FINAL/ExportedProjects/NanoSynth/project_source/source/rafx_source/: ModulationMatrix.cpp  NanoSynth.cpp  NanoSynth.h  SynthParamLimits.h
ALL_SDK/myprojects/NanoSynth FINAL/ExportedProjects/NanoSynth/project_source/source/vst_source/: LogParameter.h  PeakParameter.cpp  PeakParameter.h  RafxPluginFactory.cpp  RafxPluginFactory.h  VSTProcessor.h  VoltOctaveParameter.h  factory.cpp  version.h
ALL_SDK/myprojects/NanoSynth FINAL/ExportedProjects/NanoSynth/project_source/source/vstgui_source/: KickButtonWP.cpp  KickButtonWP.h  PadControllerWP.h  RAFXSwitchView.cpp  RAFXSwitchView.h  RackAFXGUIFactory.cpp  RackAFXMeterDetector.cpp  RafxVSTEditor.h  TextLabelEditWP.cpp  TextLabelEditWP.h  VST3EditorWP.h  VuMeterWP.cpp  WPXMLParser.cpp  WPXMLParser.h  XYPadWP.h  vstguidefaults.h
ALL_SDK/myprojects/minimoog/: ADSR.cpp  Adder.cpp  BasicBlock.cpp  CMakeLists.txt  Filter.cpp  Moog.cpp  Moog.h  MoogPlugin.cpp  Multiplexer.cpp  Multiplier.cpp  Noise.cpp  Number.cpp  Oscil.cpp  RCa09108  RCa11916  README.md  RackAFXDLL.cpp  RackAFXDLL.h  Waveform.cpp  audioeffect.h  audioeffectx.h  globals.cpp  globals.h  minimoog.cpp  minimoog.h  minimoog.prj  minimoog.sln  minimoog.vcproj  minimoog.vcxproj  minimoog.vcxproj.filters  plug.rc  plugfactory.cpp  plugin.cpp  plugprocessor.cpp
ALL_SDK/myprojects/minimoog/doc/postscript/: moog.aux  moog.dvi  moog.ps
ALL_SDK/myprojects/minimoog/doc/src/: bibliografia.bib  moog.tex
ALL_SDK/myprojects/minimoog/include/: MoogPlugin.h  basic_blocks.h
ALL_SDK/myprojects/minimoog/resource/: MoogPlugin.def
ALL_SDK/myprojects/minimoog/source/: ADSR.cpp  Adder.cpp  BasicBlock.cpp  Filter.cpp  Moog.cpp  MoogPlugin.cpp  Multiplexer.cpp  Multiplier.cpp  Noise.cpp  Number.cpp  Oscil.cpp  Waveform.cpp  audioeffect.cpp  audioeffectx.cpp  globals.cpp  plugprocessor.cpp  vstplugmain.cpp
Redist/JKnobMan132/: JKnobMan.ini
(+3920 files in other folders)
